--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
-    padding: 0;
+    color: white;
     box-sizing: border-box;
     scroll-behavior: smooth;
+}
+body {
+    font-family: 'raleway', sans-serif;     
+    line-height: 1.6;
 }
