--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ body {
     line-height: 1.6;
 }
 
+.site-header {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: brown;
+    padding: 10px 0;
+}
+
 .content {
     width: calc(100% - 308px);
     padding: 20px;
@@ -36,6 +42,27 @@ body {
 .site-header {
     position: sticky;
     top: 0;
-    background: #fff;
+    background: #4a1c4a;
+    display: flex;
     z-index: 100;
+    justify-content: space-between;
+}
+
+.logo-mv4 {
+    width: 150px;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.footer-py-3 {
+    background-color: #4a1c4a;
+    text-align: center;
+    padding: 15px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+.footer-text {
+    color: white;
+    font-size: 36px;
 }
