--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@
     .site-logo {
         height: 52px;
         display: flex;
-        align-items: center;    
+        align-items: center;
         justify-content: center;
     }
 
@@ -200,4 +200,12 @@
         text-align: center;
         background-color: coral;
         color: white;
+    }
+
+    .card__img {
+        width: 100%;
+        height: 140px;
+        object-fit: cover;
+        border-radius: 10px;
+        display: block;
     }
