--- a/styles/template.css
+++ b/styles/template.css
@@ -30,6 +30,7 @@ main {
 .hero {
     width: 100%;
     height: 90vh;
+    max-width: 1920px;
     display: grid;
     place-items: center;
     text-align: center;
