--- a/styles/template.css
+++ b/styles/template.css
@@ -1,80 +1,48 @@
+/* Body Standards */
+:root {
 
-/* Menü */
-#menu-root {
+    --farbe-hintergrund: #fdf6e3fd;
+    --farbe-hintergrund2: #e6dfb7;
+    --farbe-shoppingBAsket: #e6d8cb;
+    --color_whit: white;
+
+    /* fonts */
+    --main-font: 'InterCustom', sans-serif;
+}
+
+* {
+    text-decoration: none;
+    list-style: none;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: var(--main-font);
+background-color: var(--farbe-hintergrund);
+}
+
+.standard_display_gap {
     display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-
-.category__title {
-    margin: 8px 0;
-}
-
-.grid {
-    display: grid;
-    gap: var(--gap);
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-}
-
-.card {
-    background: #fff;
-    border: 1px solid #eee;
-    border-radius: var(--radius);
-    padding: 12px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    cursor: pointer;
-}
-
-.card__header {
-    display: flex;
-    justify-content: space-between;
-    gap: 8px;
     align-items: center;
+    justify-content: center;
 }
 
-.card__title {
-    margin: 0;
-    font-size: 1rem;
+.standard_border_radius {
+    border-radius: 5px;
 }
 
-.card__price {
-    font-weight: 600;
+.seperateur {
+    width: 100%;
+    height: 10px;
+    border-top: 3px solid black;
+    background-color: lightgray;
+    /* nur zum Testen sichtbar */
 }
-
-.card__desc {
-    margin: 0;
-    color: #555;
-    min-height: 3.2em;
-}
-
-.card__actions {
-    display: flex;
-    justify-content: flex-end;
-    gap: 6px;
-}
-
-.btn {
-    border: 1px solid #ddd;
-    background: #fff;
-    padding: 6px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background: #f5f5f5;
-}
-
-.btn--primary {
-    background: #ff7a00;
-    color: #fff;
-    border-color: #E76C1F;
-    ;
-}
-
-.btn--ghost {
-    background: transparent;
-}
-
